--- a/mods/memoryleakfix.pw.toml
+++ b/mods/memoryleakfix.pw.toml
@@ -11,3 +11,8 @@ hash = "784bbbe9c64ac9d3d4ad19786c02291e607fcf4e"
 [update.modrinth]
 mod-id = "NRjRiSSD"
 version = "5xvCCRjJ"
+
+[option]
+optional = true
+default = true
+description = "A mod that fixes random memory leaks for both the client and server"
