--- a/mods/dynamic-fps.pw.toml
+++ b/mods/dynamic-fps.pw.toml
@@ -1,18 +1,18 @@
 name = "Dynamic FPS"
-filename = "dynamic-fps-3.4.3+minecraft-1.19.0-fabric.jar"
+filename = "dynamic-fps-3.7.3+minecraft-1.19.0-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/8qMOAA4B/dynamic-fps-3.4.3%2Bminecraft-1.19.0-fabric.jar"
+url = "https://cdn.modrinth.com/data/LQ3K71Q1/versions/xZc6GQor/dynamic-fps-3.7.3%2Bminecraft-1.19.0-fabric.jar"
 hash-format = "sha1"
-hash = "be11cc0e21b95315784da06afdb335705862260e"
+hash = "39c12bbb236d9dac40c29f0845f1b801d8671e3a"
 
 [update]
 [update.modrinth]
 mod-id = "LQ3K71Q1"
-version = "8qMOAA4B"
+version = "xZc6GQor"
 
 [option]
 optional = true
-default = true
 description = "Reduce resource usage while Minecraft is in the background or idle."
+default = true
