--- a/mods/immediatelyfast.pw.toml
+++ b/mods/immediatelyfast.pw.toml
@@ -1,18 +1,18 @@
 name = "ImmediatelyFast"
-filename = "ImmediatelyFast-Fabric-1.2.14+1.19.2.jar"
+filename = "ImmediatelyFast-Fabric-1.2.21+1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/5ZwdcRci/versions/cxatW0Qh/ImmediatelyFast-Fabric-1.2.14%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/5ZwdcRci/versions/xeClFgJx/ImmediatelyFast-Fabric-1.2.21%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "280fd170a34b787b9ffce5e09d23d77ebdd5d659"
+hash = "a6f25481d45fcddb06769f89c8dd7d2bd4f5dfe9"
 
 [update]
 [update.modrinth]
 mod-id = "5ZwdcRci"
-version = "cxatW0Qh"
+version = "xeClFgJx"
 
 [option]
 optional = true
-default = true
 description = "Speed up immediate mode rendering in Minecraft"
+default = true
