--- a/mods/modernfix.pw.toml
+++ b/mods/modernfix.pw.toml
@@ -1,18 +1,18 @@
 name = "ModernFix"
-filename = "modernfix-fabric-5.17.0+mc1.19.2.jar"
+filename = "modernfix-fabric-5.18.0+mc1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/nmDcB62a/versions/kGQbFg0p/modernfix-fabric-5.17.0%2Bmc1.19.2.jar"
+url = "https://cdn.modrinth.com/data/nmDcB62a/versions/QA8FnfC2/modernfix-fabric-5.18.0%2Bmc1.19.2.jar"
 hash-format = "sha1"
-hash = "9628c897b48db5043eb3be2e42c07c315ede54cb"
+hash = "8248d855a880b213cc7252e031c75a835a205b5e"
 
 [update]
 [update.modrinth]
 mod-id = "nmDcB62a"
-version = "kGQbFg0p"
+version = "QA8FnfC2"
 
 [option]
 optional = true
-default = true
 description = "All-in-one mod that improves performance, reduces memory usage, and fixes many bugs."
+default = true
